fix: font not working + lagging lottie animation on safari

--- a/src/renderer/assets/css/fonts.css
+++ b/src/renderer/assets/css/fonts.css
@@ -1,120 +1,146 @@
-@font-face {
+/* @font-face {
   font-family: 'SVN-Avenir Next';
   src: url('~/assets/fonts/SVN-AvenirNext/SVN-AvenirNext-Black.ttf') format('truetype');
   font-weight: normal;
   font-style: normal;
-}
+  font-display: swap;
+} */
 @font-face {
   font-family: 'SVN-Avenir Next';
   src: url('~/assets/fonts/SVN-AvenirNext/SVN-AvenirNext-BlackItalic.ttf') format('truetype');
   font-weight: normal;
   font-style: italic;
+  font-display: swap;
 }
 @font-face {
   font-family: 'SVN-Avenir Next';
-  src: url('~/assets/fonts/SVN-AvenirNext/SVN-AvenirNext-Bold.ttf') format('truetype');
+  src: url('~/assets/fonts/SVN-AvenirNext/SVN-AvenirNext-Bold.ttf') format('truetype'), 
+    url('~/assets/fonts/SVN-AvenirNext/SVN-AvenirNext-Bold.woff') format('woff');
   font-weight: 700;
   font-style: normal;
+  font-display: swap;
 }
 @font-face {
   font-family: 'SVN-Avenir Next';
   src: url('~/assets/fonts/SVN-AvenirNext/SVN-AvenirNext-BoldItalic.ttf') format('truetype');
   font-weight: 700;
   font-style: italic;
+  font-display: swap;
 }
 @font-face {
   font-family: 'SVN-Avenir Next';
-  src: url('~/assets/fonts/SVN-AvenirNext/SVN-AvenirNext-Demi.ttf') format('truetype');
+  src: url('~/assets/fonts/SVN-AvenirNext/SVN-AvenirNext-Demi.ttf') format('truetype'),
+    url('~/assets/fonts/SVN-AvenirNext/SVN-AvenirNext-Demi.woff') format('woff');
   font-weight: 600;
   font-style: normal;
+  font-display: swap;
 }
 @font-face {
   font-family: 'SVN-Avenir Next';
   src: url('~/assets/fonts/SVN-AvenirNext/SVN-AvenirNext-DemiItalic.ttf') format('truetype');
   font-weight: 600;
   font-style: italic;
+  font-display: swap;
 }
 @font-face {
   font-family: 'SVN-Avenir Next';
-  src: url('~/assets/fonts/SVN-AvenirNext/SVN-AvenirNext-ExtraBold.ttf') format('truetype');
+  src: url('~/assets/fonts/SVN-AvenirNext/SVN-AvenirNext-ExtraBold.ttf') format('truetype'),
+    url('~/assets/fonts/SVN-AvenirNext/SVN-AvenirNext-ExtraBold.woff') format('woff');
   font-weight: 800;
   font-style: normal;
+  font-display: swap;
 }
 @font-face {
   font-family: 'SVN-Avenir Next';
   src: url('~/assets/fonts/SVN-AvenirNext/SVN-AvenirNext-ExtraBoldItalic.ttf') format('truetype');
   font-weight: 800;
   font-style: italic;
+  font-display: swap;
 }
 @font-face {
   font-family: 'SVN-Avenir Next';
   src: url('~/assets/fonts/SVN-AvenirNext/SVN-AvenirNext-Heavy.ttf') format('truetype');
   font-weight: 900;
   font-style: normal;
+  font-display: swap;
 }
 @font-face {
   font-family: 'SVN-Avenir Next';
   src: url('~/assets/fonts/SVN-AvenirNext/SVN-AvenirNext-HeavyItalic.ttf') format('truetype');
   font-weight: 900;
   font-style: italic;
+  font-display: swap;
 }
 @font-face {
   font-family: 'SVN-Avenir Next';
   src: url('~/assets/fonts/SVN-AvenirNext/SVN-AvenirNext-Italic.ttf') format('truetype');
   font-weight: normal;
   font-style: italic;
+  font-display: swap;
 }
 @font-face {
   font-family: 'SVN-Avenir Next';
   src: url('~/assets/fonts/SVN-AvenirNext/SVN-AvenirNext-Light.ttf') format('truetype');
   font-weight: 300;
   font-style: italic;
+  font-display: swap;
 }
 @font-face {
   font-family: 'SVN-Avenir Next';
   src: url('~/assets/fonts/SVN-AvenirNext/SVN-AvenirNext-LightItalic.ttf') format('truetype');
   font-weight: 300;
   font-style: italic;
+  font-display: swap;
 }
 @font-face {
   font-family: 'SVN-Avenir Next';
-  src: url('~/assets/fonts/SVN-AvenirNext/SVN-AvenirNext-Medium.ttf') format('truetype');
+  src: url('~/assets/fonts/SVN-AvenirNext/SVN-AvenirNext-Medium.ttf') format('truetype'),
+    url('~/assets/fonts/SVN-AvenirNext/SVN-AvenirNext-Medium.woff') format('woff');
   font-weight: 500;
   font-style: normal;
+  font-display: swap;
 }
 @font-face {
   font-family: 'SVN-Avenir Next';
-  src: url('~/assets/fonts/SVN-AvenirNext/SVN-AvenirNext-MediumItalic.ttf') format('truetype');
+  src: url('~/assets/fonts/SVN-AvenirNext/SVN-AvenirNext-MediumItalic.ttf') format('truetype'),
+    url('~/assets/fonts/SVN-AvenirNext/SVN-AvenirNext-MediumItalic.woff') format('woff');
   font-weight: 500;
   font-style: italic;
+  font-display: swap;
 }
 @font-face {
   font-family: 'SVN-Avenir Next';
-  src: url('~/assets/fonts/SVN-AvenirNext/SVN-AvenirNext-Regular.ttf') format('truetype');
+  src: url('~/assets/fonts/SVN-AvenirNext/SVN-AvenirNext-Regular.ttf') format('truetype'),
+    url('~/assets/fonts/SVN-AvenirNext/SVN-AvenirNext-Regular.woff') format('woff');
   font-weight: normal;
   font-style: normal;
+  font-display: swap;
 }
 @font-face {
   font-family: 'SVN-Avenir Next';
   src: url('~/assets/fonts/SVN-AvenirNext/SVN-AvenirNext-Thin.ttf') format('truetype');
   font-weight: 100;
   font-style: normal;
+  font-display: swap;
 }
 @font-face {
   font-family: 'SVN-Avenir Next';
   src: url('~/assets/fonts/SVN-AvenirNext/SVN-AvenirNext-ThinItalic.ttf') format('truetype');
   font-weight: 100;
   font-style: italic;
+  font-display: swap;
 }
 @font-face {
   font-family: 'SVN-Avenir Next';
   src: url('~/assets/fonts/SVN-AvenirNext/SVN-AvenirNext-UltraLight.ttf') format('truetype');
   font-weight: 200;
   font-style: normal;
+  font-display: swap;
 }
 @font-face {
   font-family: 'SVN-Avenir Next';
   src: url('~/assets/fonts/SVN-AvenirNext/SVN-AvenirNext-UltraLightItalic.ttf') format('truetype');
   font-weight: 200;
   font-style: italic;
+  font-display: swap;
 }
